--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-app",
-  "homepage": "https://khizarkhizar.github.io/home",
+  "homepage": "https://khizarkhizar.github.io/web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
